# razan

./: .gitmodules  .old_Makefile  CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  cmake_install.cmake
include/: client.h  client_chat.h  client_chat.hpp  client_management.hpp  client_manager.h  crypt.h  encryption.h  encryption.hpp  key_sharing.h  logger.h  server.h  types.hpp
man/: razan.man  razan_server.man
src/: client.c  client_chat.c  client_chat.cc  client_management.cc  client_manager.c  encryption.c  encryption.cc  key_sharing.c  logger.c  razan_client.c  razan_client.cc  razan_server.c  razan_server.cc  server.c
